--- a/public/home2.html
+++ b/public/home2.html
@@ -126,7 +126,6 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4 mt-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-
                     </div>
                     <div class="topbar-divider d-none d-sm-block"></div>
                     <li class="nav-item dropdown no-arrow mb-4 ml-auto ">
@@ -144,7 +143,6 @@
                     </li>
                 </nav>
                 <div class="container-fluid">
-
                     <!-- Content Row -->
                     <div class="row">
 
@@ -243,16 +241,51 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-
-
-
-
-
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-xl-2 col-md-6 mb-4 ">
+                            <div class="card border-bottom-success shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                                akurasi</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="akurasi"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-2 col-md-6 mb-4 ">
+                            <div class="card border-bottom-success shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                                recall</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="recall"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-2 col-md-6 mb-4 ">
+                            <div class="card border-bottom-success shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                                presisi</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="presisi"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                     <!-- /.container-fluid -->
-
                 </div>
                 <!-- End of Main Content -->
 
@@ -329,6 +362,32 @@
                 // Initialize Firebase
             firebase.initializeApp(firebaseConfig)
                 // firebase.analytics();
+            var database = firebase.database();
+
+            const accuracy = firebase.database().ref('confusionMatrix/accuracy');
+            // Mendengarkan perubahan pada data
+            accuracy.on('value', (snapshot) => {
+                // Handle data yang diambil dari snapshot.val()
+                const data = snapshot.val();
+                // Memasukkan data ke dalam elemen dengan id "akurasi"
+                document.getElementById('akurasi').innerText = data;
+            });
+            const recall = firebase.database().ref('confusionMatrix/recall');
+            // Mendengarkan perubahan pada data
+            recall.on('value', (snapshot) => {
+                // Handle data yang diambil dari snapshot.val()
+                const data = snapshot.val();
+                // Memasukkan data ke dalam elemen dengan id "akurasi"
+                document.getElementById('recall').innerText = data;
+            });
+            const precision = firebase.database().ref('confusionMatrix/precision');
+            // Mendengarkan perubahan pada data
+            precision.on('value', (snapshot) => {
+                // Handle data yang diambil dari snapshot.val()
+                const data = snapshot.val();
+                // Memasukkan data ke dalam elemen dengan id "akurasi"
+                document.getElementById('presisi').innerText = data;
+            });
         </script>
 
 </body>
